style.css
body {
  margin: 0;
  padding: 0;
  background-color: rgb(47, 50, 45);
  display: flex;
  flex-direction: column;
  align-items: center;
  box-sizing: border-box;
}

h1,
h2,
h3 {
  text-align: center;
  color: white;
}

.book-container {
  height: 100vh;
  width: 70%;
  background-color: rgb(84, 80, 75);
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: 70px repeat(4, 1fr);
  gap: 5px;
}

.book-container > h2 {
  justify-self: center;
  grid-column: 1 / -1;
}

.books {
  background-color: rgb(57, 57, 51);
  color: white;
  border: 10px groove rgb(212, 124, 0);
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.button-container {
  height: 30px;
  display: flex;
  justify-content: space-between;
}

.read-button,
.remove-button {
  width: 50%;
  border-radius: 10%;
}

.remove-button:hover {
  background-color: red;
}

.adding {
  margin-bottom: 2px;
  width: 150px;
  height: 40px;
  font-size: 1rem;
  border-radius: 7px;
  padding: 5px;
  box-shadow: none;
  text-shadow: none;
}

.close {
  width: 20px;
  margin: 10px 0px 0px 0px;
  padding: 0;
  align-self: flex-end;
}

.addBook {
  padding: 7px;
  margin-top: 15px;
  font-size: 1.1rem;
}

button {
  background-color: rgb(47, 50, 45);
  color: white;
}

.window {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 400px;
  background-color: rgb(44, 43, 41);
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0px 20px 20px 20px;
  visibility: hidden;
}

.window h2 {
  margin-top: 0;
}

.inputs {
  display: flex;
  justify-content: space-between;
  margin-left: 10px;
  margin-top: 10px;
}

.title {
  margin-top: 0;
}

label {
  color: white;
  padding: 2px;
}

#read {
  margin-right: 3px;
  border: none;
  transform: scale(1.5);
}

input {
  border-radius: 5px;
  border: none;
}

